# opcv_opgl_cali

./: .gitignore  CMakeLists.txt  README.md  REPORTE.md
.cache/clangd/index/: Calibration.cpp.CD3AEEB4DA12EA5F.idx  Calibration.h.017BADD9285EDFE2.idx  Camera.cpp.2B3438BABB6ED388.idx  Camera.h.17B76C839D4CF296.idx  ChessboardDetector.cpp.97C49D45059E3B1B.idx  ChessboardDetector.h.FD2991742D90BE4F.idx  Config.h.5BD15EB6551A81A3.idx  MathUtils.cpp.C131B8F245F6F026.idx  MathUtils.h.B81971731374094A.idx  Model.cpp.09E35B548CD1F4C6.idx  Model.h.9C69495A49E62024.idx  PoseEstimator.cpp.4EAF11C401BD317C.idx  PoseEstimator.h.07E70FC9BCEC0FEC.idx  Renderer.cpp.65E8C44C68FEA1DA.idx  Renderer.h.2ED1A8BEA08001A5.idx  Shader.cpp.175DE8E5995A9169.idx  Shader.h.2EC81B1EC19BD41C.idx  glad.c.AEB82A6DE27599D7.idx  glad.h.837C1195E73EB7A6.idx  main.cpp.7382DE47DD49EA7E.idx
resources/calibration/: camera_params.example.yml  camera_params.yml
resources/images/: gen_chessboard.py
resources/models/lp_old_computer/: license.txt  scene.gltf
resources/shaders/: axes.frag  axes.vert  background.frag  background.vert  model.frag  model.vert  model_textured.frag  model_textured.vert
src/: Calibration.cpp  Calibration.h  Camera.cpp  Camera.h  ChessboardDetector.cpp  ChessboardDetector.h  Config.h  Model.cpp  Model.h  PoseEstimator.cpp  PoseEstimator.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  main.cpp
utils/: MathUtils.cpp  MathUtils.h
